Fixes transition bug
Fixes a transition bug when the clock hand gets to 0

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
     <div class="clock">
         <div class="clock-face">
             <div class="hand hour-hand"></div>
-            <div class="hand minute-hand"></div>
-            <div class="hand seconds-hand"></div>
+            <div class="hand minute-hand" id=""></div>
+            <div class="hand seconds-hand" id=""></div>
         </div>
     </div>
 
